--- a/paginaPrincipal/css/header.css
+++ b/paginaPrincipal/css/header.css
@@ -96,4 +96,38 @@ body {
 	.menu-lista>li>img {
 		margin-right: 15em;
 	}
+
+	.menu-visivel .invisivel {
+		display: block;
+		padding: 1em;
+	}
+
+	.menu-visivel.menu-lista {
+		display: flex;
+		flex-direction: column;
+		align-items: flex-start;
+		padding-left: 2.3em;
+	}
+
+	#hamburguer.clicado {
+		position: fixed;
+		top: 3.5em;
+	}
+
+	.entrado {
+		margin-top: 10em;
+		left: 1.3em;
+		text-align: center;
+	}
+
+	.criar#criarconta {
+		position: fixed;
+		display: block;
+		top: 25em;
+		white-space: nowrap;
+	}
+
+	.menu-header.expandido {
+		height: 60em;
+	}
 }
