--- a/paginaInstitucional/css/header.css
+++ b/paginaInstitucional/css/header.css
@@ -25,6 +25,7 @@ header {
     font-size: 1.25em;
     padding: 1.5em;
     list-style-type: none;
+    position: relative;
 }
 
 .menu-lista li p:hover {
@@ -50,6 +51,10 @@ header {
     margin-top: 1.25em;
     border-radius: 0.3em;
     border: 1px solid #fff;
+}
+
+.barra button:hover {
+    background-color: rgb(252, 191, 212);
 }
 
 .resumo {
@@ -83,4 +88,108 @@ header {
     border-radius: 0.3em;
     border: 1px solid #fff;
     margin-top: 3em;
+}
+
+.resumo button:hover {
+    background-color: rgb(252, 191, 212);
+}
+
+#hamburguer {
+    display: none;
+}
+
+#op1 {
+    display: none;
+    background-color: #fff;
+    color: black;
+    position: absolute;
+    font-size: 0.85em;
+    border-radius: 0.3em;
+    margin-top: 1em;
+    margin-left: 14em;
+    z-index: 1;
+}
+
+#op2 {
+    display: none;
+    background-color: #fff;
+    color: black;
+    position: absolute;
+    font-size: 0.85em;
+    border-radius: 0.3em;
+    margin-top: 1em;
+    margin-left: 24.5em;
+    z-index: 1;
+}
+
+#op3 {
+    display: none;
+    background-color: #fff;
+    color: black;
+    position: absolute;
+    font-size: 0.85em;
+    border-radius: 0.3em;
+    margin-top: 1em;
+    margin-left: 36.5em;
+    z-index: 1;
+}
+
+@media screen and (max-width: 768px) {
+    .invisivel {
+        display: none;
+    }
+
+    #hamburguer {
+        display: block;
+        margin-top: 2.25em;
+        margin-left: 9em;
+    }
+
+    header {
+        height: 55em;
+    }
+
+    .menu-lista li:last-child {
+        display: none;
+    }
+
+    .barra button {
+        font-size: 0.7em;
+        margin-left: 4em;
+        margin-top: 2.5em;
+    }
+
+    .menu-lista li:first-child img {
+        width: 2em;
+        height: 2em;
+        margin-top: 1em;
+        margin-left: -4em;
+    }
+
+    .resumo {
+        flex-direction: column-reverse;
+    }
+
+    .resumo img {
+        width: 25em;
+        margin-left: -2.25em;
+    }
+
+    .resumo #teb p:first-child {
+        font-size: 2em;
+        padding-right: 12em;
+        margin-left: -1em;
+        text-align: center;
+    }
+
+    .resumo #teb p:nth-child(2) {
+        font-size: 1.15em;
+        margin-left: -1.5em;
+        padding-right: 20em;
+        text-align: center;
+    }
+
+    .resumo button {
+        margin-left: 2em;
+    }
 }
