--- a/paginaInstitucional/css/footer.css
+++ b/paginaInstitucional/css/footer.css
@@ -27,25 +27,121 @@ footer section:first-child ul li:first-child {
 }
 
 footer section:first-child ul:first-child {
+    padding-right: 1em;
     margin-left: 3em;
     width: 16em;
-}
-
-footer section:first-child ul:not(:first-child) {
-    margin-left: 2em;
-}
-
-footer section:first-child #redesapp {
-    margin-left: 12em;
 }
 
 footer section:first-child img {
     margin-right: 0.25em;
 }
 
-footer section:first-child #redesapp ul:last-child {
+footer section:first-child .organiza {
+    display: flex;
+    margin-left: -3em;
+    width: 5em;
+}
+
+footer section:first-child .organizar {
+    display: flex;
+    width: 5em;
+    margin-left: 20em;
+}
+
+footer section:first-child .organizar #redesapp {
+    margin-left: 15em;
+}
+
+footer section:first-child .organizar ul:first-child {
+    white-space: nowrap;
+}
+
+footer section:first-child .organizar #redesapp ul:last-child {
     margin-left: 3em;
 }
 
 @media screen and (max-width: 768px) {
+    footer section:first-child {
+        margin-left: -1em;
+        margin-right: -1em;
+        flex-direction: column;
+        font-size: 0.75em;
+        height: 82em;
+    }
+
+    footer section:first-child ul:first-child {
+        margin-left: -1.5em;
+        width: 28em;
+        margin-bottom: -2em;
+    }
+
+    footer section:first-child ul:first-child li {
+        line-height: 2em;
+    }
+
+    footer section:first-child .organiza {
+        margin-left: 0.0125em;
+        width: 30em;
+        white-space: nowrap;
+    }
+
+    footer section:first-child .organizar {
+        margin-left: -0.025em;
+    }
+
+    footer section:first-child .organizar #redesapp {
+        margin-left: 3.5em;
+    }
+
+    footer section:first-child .organizar #redesapp ul:last-child {
+        margin-left: -1.5em;
+    }
+}
+
+footer section:last-child {
+    background-color: #890019;
+    margin-left: -0.5em;
+    margin-right: -0.5em;
+    margin-bottom: -0.5em;
+    padding: 1.5em;
+}
+
+footer section:last-child div {
+    margin-right: 6em;
+    display: flex;
+    justify-content: space-between;
+}
+
+footer section:last-child img {
+    width: 3.5em;
+    margin-left: 4em;
+}
+
+footer section:last-child p {
+    color: #fff;
+    font-size: 0.85em;
+}
+
+@media screen and (max-width: 768px) {
+    footer section:last-child {
+        padding-bottom: 4em;
+    }
+
+    footer section:last-child div {
+        flex-direction: column;
+    }
+
+    footer section:last-child img {
+        width: 6em;
+        align-self: center;
+        position: relative;
+    }
+
+    footer section:last-child p {
+        text-align: center;
+        position: absolute;
+        margin-top: 5em;
+        padding-right: 1em;
+        font-size: 0.8em;
+    }
 }
