--- a/paginaInstitucional/css/header.css
+++ b/paginaInstitucional/css/header.css
@@ -30,6 +30,7 @@ header {
     padding: 1.5em;
     list-style-type: none;
     position: relative;
+    white-space: nowrap;
 }
 
 .menu-lista li p:hover {
@@ -122,7 +123,7 @@ header {
     font-size: 0.85em;
     border-radius: 0.3em;
     margin-top: 1em;
-    margin-left: 24.5em;
+    margin-left: 25em;
     z-index: 1;
 }
 
@@ -134,7 +135,7 @@ header {
     font-size: 0.85em;
     border-radius: 0.3em;
     margin-top: 1em;
-    margin-left: 36.5em;
+    margin-left: 38em;
     z-index: 1;
 }
 
@@ -143,23 +144,28 @@ header {
         display: none;
     }
 
+    .invisivel img {
+        display: none;
+    }
+
+    .invisivel p {
+        display: none;
+    }
+
+
     #hamburguer {
         display: block;
         margin-top: 2.25em;
-        margin-left: 8em;
+        margin-left: 7em;
     }
 
     header {
         height: 62em;
     }
 
-    .menu-lista li:last-child {
-        display: none;
-    }
-
     .barra button {
         font-size: 0.7em;
-        margin-left: 4em;
+        margin-left: -1em;
         margin-top: 2.5em;
     }
 
@@ -181,19 +187,49 @@ header {
 
     .resumo #teb p:first-child {
         font-size: 2em;
-        padding-right: 12em;
-        margin-left: -1em;
+        padding-right: 10em;
+        margin-left: -4em;
         text-align: center;
     }
 
     .resumo #teb p:nth-child(2) {
         font-size: 1.15em;
-        margin-left: -1.5em;
-        padding-right: 20em;
+        margin-left: -4em;
+        padding-right: 21em;
         text-align: center;
     }
 
     .resumo button {
         margin-left: 2em;
+    }
+
+    .barra .botao {
+        display: none;
+    }
+
+    .menu-visivel {
+        margin-left: -0.5em;
+        margin-top: -0.5em;
+        background-color: #fff;
+        width: 29em;
+        height: 28em;
+        z-index: 1;
+        color: black;
+    }
+
+    .menu-visivel .invisivel {
+        display: block;
+        padding: 1em;
+    }
+
+    .menu-visivel.menu-lista {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        padding-left: 2.3em;
+    }
+
+    .menu-visivel#hamburguer {
+        color: black;
     }
 }
